--- a/aside.htm
+++ b/aside.htm
@@ -1,7 +1,7 @@
 <aside>
     <h1>
         <a href="index.htm">
-            <img src="images/logo.png" alt=""><span>SuperCMS 網站管理平台</span>
+            <img src="images/W_logo.png" alt=""><span>W CMS 網站管理平台</span>
         </a>
     </h1>
     <!-- 現在網站 -->
