--- a/aside.htm
+++ b/aside.htm
@@ -6,12 +6,12 @@
     </h1>
     <!-- 現在網站 -->
     <div class="now_edit">
-        <div class="pic">
+        <!--div class="pic">
             <img src="images/website_preview.jpg" alt="">
-        </div>
+        </div-->
         <div class="info">
             <p>
-                <a href="#">基隆市政府全球資訊網</a>
+                <a href="#">預設前台入口網</a>
             </p>
             <div class="btn_grp">
                 <a href="card_website.htm" class="btn">網站總覽</a>
