--- a/aside.htm
+++ b/aside.htm
@@ -5,10 +5,10 @@
         </a>
     </h1>
     <!-- 現在網站 -->
-    <div class="now_edit">
-        <!--div class="pic">
+    <!--div class="now_edit">
+        <div class="pic">
             <img src="images/website_preview.jpg" alt="">
-        </div-->
+        </div>
         <div class="info">
             <p>
                 <a href="#">預設前台入口網</a>
@@ -18,7 +18,7 @@
                 <a href="#" class="btn btn_change">快速切換</a>
             </div>
         </div>
-    </div>
+    </div-->
     <!-- menu -->
     <nav>
         <!-- level1 -->
