--- a/header.htm
+++ b/header.htm
@@ -5,12 +5,12 @@
         <!-- 版頭右側功能 -->
         <div class="control_panel">
             <!-- 提醒事項通知 -->
-            <div class="item alert">
+            <!--div class="item alert">
                 <a href="#">
                     <img src="images/iot_icon/alert.svg" alt="">
                 </a>
                 <span>100</span>
-            </div>
+            </div-->
             <!--  個人化panel -->
             <div class="item account dropdown">
                 <a href="#" class="dropdown-btn">
