--- a/header.htm
+++ b/header.htm
@@ -13,13 +13,21 @@
             </div-->
             <!--  個人化panel -->
             <div class="item account dropdown">
-                <a href="#" class="dropdown-btn">
+                <!--a href="#" class="dropdown-btn">
                     <img src="images/man.svg" alt="">
-                </a>
-                <div class="dropdown-content">
+                </a-->
+                <img src="images/man.svg" alt="">
+                <div class="id">admin(administrator)<br>
+                2020-01-01 14:00:05 從10.10.1.1 登入系統</div>
+                <div class="btn-grp">
+                    <button class="btn">變更密碼</button>
+                    <button class="btn btn-red">登出</button>
+                </div>
+
+                <!--div class="dropdown-content">
                     <div class="info">
                         <div class="pic">
-                            <img src="https://assets.imgix.net/unsplash/bear.jpg?w=800&h=480" alt="">
+                            <img src="images/man.svg" alt="">
                         </div>
                         <div class="id">admin(administrator)</div>
                     </div>
@@ -30,7 +38,7 @@
                         <button class="btn">變更密碼</button>
                         <button class="btn btn-red">登出</button>
                     </div>
-                </div>
+                </div-->
             </div>
         </div>
     </div>
