--- a/header.htm
+++ b/header.htm
@@ -23,8 +23,14 @@
                     <button class="btn">變更密碼</button>
                     <button class="btn btn-red">登出</button>
                 </div>
+            </div>
 
-                <!--div class="dropdown-content">
+            <!--div class="item account dropdown">
+                <a href="#" class="dropdown-btn">
+                    <img src="images/man.svg" alt="">
+                </a>
+
+                <div class="dropdown-content">
                     <div class="info">
                         <div class="pic">
                             <img src="images/man.svg" alt="">
@@ -38,8 +44,8 @@
                         <button class="btn">變更密碼</button>
                         <button class="btn btn-red">登出</button>
                     </div>
-                </div-->
-            </div>
+                </div>
+            </div-->
         </div>
     </div>
 </header>
