--- a/header.htm
+++ b/header.htm
@@ -12,10 +12,7 @@
                 <span>100</span>
             </div-->
             <!--  個人化panel -->
-            <div class="item account dropdown">
-                <!--a href="#" class="dropdown-btn">
-                    <img src="images/man.svg" alt="">
-                </a-->
+            <div class="item">
                 <img src="images/man.svg" alt="">
                 <div class="id">admin(administrator)<br>
                 2020-01-01 14:00:05 從10.10.1.1 登入系統</div>
