--- a/header.htm
+++ b/header.htm
@@ -12,11 +12,10 @@
                 <span>100</span>
             </div-->
             <!--  個人化panel -->
-            <div class="item">
-                <img src="images/man.svg" alt="">
-                <div class="id">admin(administrator)<br>
-                2020-01-01 14:00:05 從10.10.1.1 登入系統</div>
-                <div class="btn-grp">
+            <div>
+                <p style="display: inline-block;">admin(administrator)<br>
+                2020-01-01 14:00:05 從10.10.1.1 登入系統</p>
+                <div class="btn-grp" style="display: inline-block;">
                     <button class="btn">變更密碼</button>
                     <button class="btn btn-red">登出</button>
                 </div>
