--- a/header.htm
+++ b/header.htm
@@ -12,16 +12,7 @@
                 <span>100</span>
             </div-->
             <!--  個人化panel -->
-            <div>
-                <p style="display: inline-block;">admin(administrator)<br>
-                2020-01-01 14:00:05 從10.10.1.1 登入系統</p>
-                <div class="btn-grp" style="display: inline-block;">
-                    <button class="btn">變更密碼</button>
-                    <button class="btn btn-red">登出</button>
-                </div>
-            </div>
-
-            <!--div class="item account dropdown">
+            <div class="item account dropdown">
                 <a href="#" class="dropdown-btn">
                     <img src="images/man.svg" alt="">
                 </a>
@@ -41,7 +32,7 @@
                         <button class="btn btn-red">登出</button>
                     </div>
                 </div>
-            </div-->
+            </div>
         </div>
     </div>
 </header>
