--- a/header.htm
+++ b/header.htm
@@ -23,10 +23,11 @@
                             <img src="images/man.svg" alt="">
                         </div>
                         <div class="id">admin(administrator)</div>
+                        <div>2020-01-01 14:00:05 從10.10.1.1 登入系統</div>
                     </div>
-                    <ul>
+                    <!--ul>
                         <li>2020-01-01 14:00:05 從10.10.1.1 登入系統</li>
-                    </ul>
+                    </ul-->
                     <div class="btn-grp">
                         <button class="btn">變更密碼</button>
                         <button class="btn btn-red">登出</button>
