--- a/aside.htm
+++ b/aside.htm
@@ -29,7 +29,7 @@
                     <span>Home</span>
                 </a>
             </li>
-            <div class="divider">Element</div>
+            <!--div class="divider">Element</div>
             <li>
                 <a href="basic_gridsystem.htm">
                     <img src="images/iot_icon/template.svg" alt="">
@@ -70,7 +70,7 @@
                     <img src="images/iot_icon/widget.svg" alt="">
                     <span>Basic Layout</span>
                 </a>
-                <!-- level2 -->
+
                 <ul>
                     <li>
                         <a href="basic_widget.htm">
@@ -83,21 +83,19 @@
                         </a>
                     </li>
                 </ul>
-            </li>
-            <div class="divider">pages</div>
+            </li-->
+            <div class="divider">功能清單</div>
             <li>
                 <a href="#">
                     <img src="images/iot_icon/document.svg" alt="">
-                    <span>資料發布</span>
+                    <span>內容管理</span>
                 </a>
                 <ul>
-                    <li><a href="data_list.htm"><span>文章列表</span></a></li>
-                    <li><a href="data_new.htm"><span>新增資料-可拖曳區塊</span></a></li>
-                    <li><a href="data_new2.htm"><span>新增資料-editor</span></a></li>
-
+                    <li><a href="data_list_noTree.htm"><span>快速上稿</span></a></li>
+                    <li><a href="data_list.htm"><span>單元上稿</span></a></li>
                 </ul>
             </li>
-            <li>
+            <!--li>
                 <a href="template.htm">
                     <img src="images/iot_icon/template.svg" alt="">
                     <span>版型管理</span>
@@ -137,7 +135,6 @@
                     <img src="images/iot_icon/admingrp2.svg" alt="">
                     <span>權限管理</span>
                 </a>
-                <!-- level2 -->
                 <ul>
                     <li><a href="user01_list.htm"><span>使用者管理</span></a></li>
                     <li><a href="user01_add.htm"><span>新增管理</span></a></li>
@@ -147,7 +144,6 @@
                     <img src="images/iot_icon/document.svg" alt="">
                     <span>登入</span>
                 </a>
-                <!-- level2 -->
                 <ul>
                     <li><a href="login.htm" target="_blank"><span>login</span></a></li>
                     <li><a href="login_bg.htm" target="_blank"><span>login+bg</span></a></li>
@@ -164,12 +160,12 @@
                     <img src="images/iot_icon/line.svg" alt="">
                     <span>Loader</span>
                 </a>
-            </li>
+            </li-->
             <li><a href="#">
                     <img src="images/iot_icon/bar.svg" alt="">
                     <span>第一層選單</span>
                 </a>
-                <!-- level2 -->
+
                 <ul>
                     <li><a href="#"><span>第二層選單</span></a></li>
                     <li><a href="#"><span>第二層選單</span></a></li>
@@ -179,7 +175,7 @@
                     <img src="images/iot_icon/combo.svg" alt="">
                     <span>第一層選單</span>
                 </a>
-                <!-- level2 -->
+
                 <ul>
                     <li><a href="#"><span>第二層選單</span></a></li>
                     <li><a href="#"><span>第二層選單</span></a></li>
@@ -189,7 +185,7 @@
                     <img src="images/iot_icon/todo.svg" alt="">
                     <span>第一層選單</span>
                 </a>
-                <!-- level2 -->
+
                 <ul>
                     <li><a href="#"><span>第二層選單</span></a></li>
                     <li><a href="#"><span>第二層選單</span></a></li>
