--- a/header.htm
+++ b/header.htm
@@ -22,8 +22,8 @@
                         <div class="pic">
                             <img src="images/man.svg" alt="">
                         </div>
-                        <div class="id">Admin(劉佳淇｜liucc@hyweb.com.tw)</div>
-                        <div>2020-01-01 14:00:05 從10.10.1.1 登入系統</div>
+                        <div class="id">Admin (劉佳淇｜liucc@hyweb.com.tw)</div>
+                        <div>2020-01-01 14:00:05 從10.10.1.1 登入</div>
                     </div>
                     <!--ul>
                         <li>2020-01-01 14:00:05 從10.10.1.1 登入系統</li>
