--- a/aside.htm
+++ b/aside.htm
@@ -93,6 +93,7 @@
                 <ul>
                     <li><a href="data_list_noTree.htm"><span>快速上稿</span></a></li>
                     <li><a href="data_list.htm"><span>單元上稿</span></a></li>
+                    <li><a href="media_photo.htm"><span>MMO管理</span></a></li>
                 </ul>
             </li>
             <!--li>
@@ -162,12 +163,11 @@
                 </a>
             </li-->
             <li><a href="#">
-                    <img src="images/iot_icon/bar.svg" alt="">
-                    <span>第一層選單</span>
+                    <img src="images/iot_icon/setting.svg" alt="">
+                    <span>系統管理</span>
                 </a>
-
                 <ul>
-                    <li><a href="#"><span>第二層選單</span></a></li>
+                    <li><a href="#"><span>使用者管理</span></a></li>
                     <li><a href="#"><span>第二層選單</span></a></li>
                 </ul>
             </li>
