--- a/header.htm
+++ b/header.htm
@@ -29,7 +29,7 @@
                         <li>2020-01-01 14:00:05 從10.10.1.1 登入系統</li>
                     </ul-->
                     <div class="btn-grp">
-                        <button class="btn">變更密碼</button>
+                        <button class="btn">個人資料</button>
                         <button class="btn btn-red">登出</button>
                     </div>
                 </div>
