--- a/aside.htm
+++ b/aside.htm
@@ -93,7 +93,7 @@
                 <ul>
                     <li><a href="data_list_noTree.htm"><span>快速上稿</span></a></li>
                     <li><a href="data_list.htm"><span>單元上稿</span></a></li>
-                    <li><a href="media_photo.htm"><span>MMO管理</span></a></li>
+                    <li><a href="media_photo.htm"><span>MMO資源庫</span></a></li>
                 </ul>
             </li>
             <!--li>
@@ -163,43 +163,39 @@
                 </a>
             </li-->
             <li><a href="#">
+                    <img src="images/iot_icon/template.svg" alt="">
+                    <span>網站管理</span>
+                </a>
+                <ul>
+                    <li><a href="#"><span>架構管理</span></a></li>
+                    <li><a href="#"><span>網別管理</span></a></li>
+                    <li><a href="card_website.htm"><span>版型管理</span></a></li>
+                </ul>
+            </li>
+            <li><a href="#">
                     <img src="images/iot_icon/setting.svg" alt="">
                     <span>系統管理</span>
                 </a>
                 <ul>
                     <li><a href="#"><span>使用者管理</span></a></li>
-                    <li><a href="#"><span>第二層選單</span></a></li>
-                </ul>
-            </li>
-            <li><a href="#">
-                    <img src="images/iot_icon/combo.svg" alt="">
-                    <span>第一層選單</span>
-                </a>
-
-                <ul>
-                    <li><a href="#"><span>第二層選單</span></a></li>
-                    <li><a href="#"><span>第二層選單</span></a></li>
+                    <li><a href="#"><span>組織架構管理</span></a></li>
+                    <li><a href="#"><span>角色權限管理</span></a></li>
+                    <li><a href="#"><span>代碼管理</span></a></li>
                 </ul>
             </li>
             <li><a href="#">
                     <img src="images/iot_icon/todo.svg" alt="">
-                    <span>第一層選單</span>
+                    <span>備用選單</span>
                 </a>
-
                 <ul>
                     <li><a href="#"><span>第二層選單</span></a></li>
                     <li><a href="#"><span>第二層選單</span></a></li>
                 </ul>
             </li>
-            <li><a href="#">
-                    <img src="images/iot_icon/box.svg" alt="">
-                    <span>第一層選單</span>
-                </a>
-            </li>
         </ul>
     </nav>
     <!-- 次層抽屜選單 -->
-    <div class="sub_nav">
+    <!--div class="sub_nav">
         <a href="#" class="close"><i class="i_close"></i></a>
         <div class="divider">請選擇並切換網站</div>
         <ul>
@@ -228,9 +224,9 @@
                 </a>
             </li>
         </ul>
-    </div>
+    </div-->
     <!-- copyright -->
-    <div class="copyright">Copyright © Hyweb </div>
+    <div class="copyright">Copyright 2021 © Hyweb </div>
 </aside>
 <!-- customize -->
 <script src="js/customize.js"></script>
