--- a/data_list_noTree.htm
+++ b/data_list_noTree.htm
@@ -30,8 +30,8 @@
             <div class="breadcrumb">
                 <ul>
                     <li><a href="light.htm">首頁</a></li>
-                    <li><a href="#">節點</a></li>
-                    <li>節點</li>
+                    <li><a href="#">內容管理</a></li>
+                    <li>快速上稿</li>
                 </ul>
             </div>
             <!-- gird section -->
@@ -239,7 +239,7 @@
                                     </div>
                                     <div class="quick_btn">
                                         <button class="btn btn-orange"><i class="i_add"></i>快速新增</button>
-                                        <button class="btn" onclick="window.location.href='data_list.htm';">上稿樹檢視</button>
+                                        <button class="btn" onclick="window.location.href='data_list.htm';">單元上稿</button>
                                     </div>
                                 </div>
                                 <div class="_content">
