--- a/data_list_noTree.htm
+++ b/data_list_noTree.htm
@@ -38,7 +38,7 @@
             <div class="grid">
                 <div class="container">
                     <div class="title">
-                        <h2>資料發布</h2>
+                        <h2>快速上稿</h2>
                         <button class="btn btn-primary btn-adv">
                             <i class="i_search"></i></button>
                     </div>
@@ -61,24 +61,36 @@
                                             </div>
                                             <div class="form_grp">
                                                 <div class="labelEffect">
-                                                    <input name="" type="text" value="">
-                                                    <button class="btn btn-text">選擇</button>
-                                                    <label>上稿單元</label>
+                                                    <select id="" name="">
+                                                        <option value="" selected="" disabled="disabled"></option>
+                                                        <optgroup label="資料夾">
+                                                            <option value="1">節點</option>
+                                                            <option value="2">節點</option>
+                                                          </optgroup>
+                                                          <optgroup label="資料夾2">
+                                                            <option value="3">節點</option>
+                                                            <option value="4">節點</option>
+                                                            <option value="4">節點</option>
+                                                          </optgroup>                                                        
+                                                    </select>
+                                                    <label>上稿單元選擇</label>
                                                 </div>
                                             </div>
                                             <div class="form_grp datepick">
                                                 <div class="startDate">
                                                     <div class="labelEffect">
-                                                        <input name="" type="calendar" value="" class="calendar">
-                                                        <button class="btn"><i class="i_calendar"></i></button>
+                                                        <input name="" type="date" value="">
+                                                        <!--input name="" type="calendar" value="" class="calendar">
+                                                        <button class="btn"><i class="i_calendar"></i></button-->
                                                         <label>上線開始日期<abbr>*</abbr></label>
                                                     </div>
                                                     <!-- <div class="help">說明文字</div> -->
                                                 </div>
                                                 <div class="endDate">
                                                     <div class="labelEffect">
-                                                        <input name="" type="calendar" value="" class="calendar">
-                                                        <button class="btn"><i class="i_calendar"></i></button>
+                                                        <input name="" type="date" value="">
+                                                        <!--input name="" type="calendar" value="" class="calendar">
+                                                        <button class="btn"><i class="i_calendar"></i></button-->
                                                         <label>上線結束日期<abbr>*</abbr></label>
                                                     </div>
                                                 </div>
@@ -88,8 +100,8 @@
                                                 <div class="form_content">
                                                     <div class="check_grp form_inline">
                                                         <label><input name="" type="checkbox" value=""><span>置頂</span></label>
-                                                        <label><input name="" type="checkbox" value=""><span>選項二</span></label>
-                                                        <label><input name="" type="checkbox" value=""><span>選項三</span></label>
+                                                        <!--label><input name="" type="checkbox" value=""><span>選項二</span></label>
+                                                        <label><input name="" type="checkbox" value=""><span>選項三</span></label-->
                                                     </div>
                                                 </div>
                                             </div>
@@ -238,7 +250,7 @@
                                         </form>
                                     </div>
                                     <div class="quick_btn">
-                                        <button class="btn btn-orange"><i class="i_add"></i>快速新增</button>
+                                        <button class="btn btn-orange" onclick="window.location.href='data_new_update.htm';"><i class="i_add"></i>快速新增</button>
                                         <button class="btn" onclick="window.location.href='data_list.htm';">單元上稿</button>
                                     </div>
                                 </div>
