--- a/data_new_update.htm
+++ b/data_new_update.htm
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SuperCMS</title>
+    <title>W CMS Lite</title>
     <!--HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries [if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -32,15 +32,15 @@
             <div class="breadcrumb">
                 <ul>
                     <li><a href="light.htm">首頁</a></li>
-                    <li><a href="#">節點</a></li>
-                    <li>節點</li>
+                    <li><a href="#">內容管理</a></li>
+                    <li>快速上稿</li>
                 </ul>
             </div>
             <!-- gird section -->
             <div class="grid">
                 <div class="container">
                     <div class="title">
-                        <h2>資料發布 / Editor版本</h2>
+                        <h2>新增資料</h2>
                         <button class="btn" onclick="window.location.href='data_list_noTree.htm';">放棄</button>
                     </div>
                     <div class="flex-12">
