--- a/treenode_edit.htm
+++ b/treenode_edit.htm
@@ -526,6 +526,21 @@
                                             </div>
                                             <!--div class="help">說明文字</div-->
                                         </div>
+                                        <div class="form_grp">
+                                            <div class="labelEffect">
+                                                <input name="" type="text">
+                                                <label>限制條件</label>
+                                            </div>
+                                            <!-- <div class="help">說明文字</div> -->
+                                        </div>
+                                        <div class="form_grp error">
+                                            <div class="form_title">排序<abbr>*</abbr></div>
+                                            <div class="form_content form_inline">
+                                                <div class="labelEffect zip">
+                                                    <input name="" type="tel" value="10" class="used">
+                                                </div>
+                                            </div>
+                                        </div>
                                         <div class="divider">分隔線</div>
                                         <hr>
                                         <div class="form_grp">
