--- a/aside.htm
+++ b/aside.htm
@@ -20,7 +20,7 @@
         </div>
     </div-->
     <!-- menu -->
-    <nav>
+    <nav style="height:100%;padding-bottom:0;">
         <!-- level1 -->
         <ul>
             <li>
@@ -167,8 +167,8 @@
                     <span>網站管理</span>
                 </a>
                 <ul>
-                    <li><a href="#"><span>架構管理</span></a></li>
-                    <li><a href="#"><span>網別管理</span></a></li>
+                    <li><a href="card_website.htm"><span>架構管理</span></a></li>
+                    <li><a href="card_website.htm"><span>網別管理</span></a></li>
                     <li><a href="card_website.htm"><span>版型管理</span></a></li>
                 </ul>
             </li>
@@ -177,10 +177,10 @@
                     <span>系統管理</span>
                 </a>
                 <ul>
-                    <li><a href="#"><span>使用者管理</span></a></li>
-                    <li><a href="#"><span>組織架構管理</span></a></li>
-                    <li><a href="#"><span>角色權限管理</span></a></li>
-                    <li><a href="#"><span>代碼管理</span></a></li>
+                    <li><a href="user01_list.htm"><span>使用者管理</span></a></li>
+                    <li><a href="user01_list.htm"><span>組織架構管理</span></a></li>
+                    <li><a href="user01_list.htm"><span>角色權限管理</span></a></li>
+                    <li><a href="user01_list.htm"><span>代碼管理</span></a></li>
                 </ul>
             </li>
             <li><a href="#">
